fix font flickering in safari

--- a/wp-content/themes/vivlio/assets/styles/common/_global.scss
+++ b/wp-content/themes/vivlio/assets/styles/common/_global.scss
@@ -21,6 +21,7 @@ body {
   font-size: 1rem;  
   line-height: 1.5;
   letter-spacing: 0px;
+  -webkit-font-smoothing: antialiased;  
 }
 
 /* Make HTML 5 elements display block-level for consistent styling */
